# ess-json-schema

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pip.yml
src/ess_json_schema/: __init__.py  commands.py  registry.py  validate.py  version.py
src/ess_json_schema/efu/caen/: calibration.json
src/ess_json_schema/efu/caen/calibration/: detector.json  group.json
src/ess_json_schema/efu/caen/configuration/: detector.json
tests/efu/caen/calibration/: test_detector.py  test_group.py
